// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ManageDropdownButton/> custom props 1`] = `
<div
  className="dropdown btn-group"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-default"
    disabled={false}
    id="jest-manage-2-managebtn"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    <span>
      <i
        className="fa fa-bars"
      />
    </span>
  </button>
  <ul
    aria-labelledby="jest-manage-2-managebtn"
    className="dropdown-menu dropdown-menu-right"
    role="menu"
  />
</div>
`;

exports[`<ManageDropdownButton/> default props 1`] = `
<div
  className="dropdown btn-group btn-group-primary"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-primary"
    disabled={false}
    id="jest-manage-1-managebtn"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    Manage
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="jest-manage-1-managebtn"
    className="dropdown-menu"
    role="menu"
  />
</div>
`;
